# FireEngine

./: CMakeLists.txt  README.md  glad.c  main.cpp
dependence/: stb_image.h
dependence/glad/: glad.h
include/: Color.hpp  Type-Macros.hpp  Window.hpp
source/: Window.cc
